<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

    <!-- ************ -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_reg_email"
            style="@style/form_edittext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_action_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_reg_password"
            style="@style/form_edittext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_action_lock_closed"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/et_reg_confirm_password"
            style="@style/form_edittext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_action_lock_closed"
            android:hint="@string/confiirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_reg_first_name"
            style="@style/form_edittext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/first_name"
            android:inputType="none"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/et_reg_last_name"
            style="@style/form_edittext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:hint="@string/last_name"
            android:inputType="none"
            android:paddingLeft="10dp" />

        <LinearLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_reg_start_year"
                style="@style/date_picker_text"
                android:layout_marginRight="10dp"
                android:hint="@string/start_year" />

            <TextView
                android:id="@+id/tv_reg_end_year"
                style="@style/date_picker_text"
                android:hint="@string/end_year" />
        </LinearLayout>

        <com.asb.helper.CustomAutoCompleteTextView
            android:id="@+id/et_reg_city_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_bg"
            android:drawableLeft="@drawable/ic_action_location"
            android:gravity="center_vertical"
            android:hint="@string/city_country"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <Button
                android:id="@+id/btn_reg_sign_up"
                style="@style/common_button"
                android:paddingRight="4dp"
                android:text="@string/sign_up" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>