<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

    <!-- ************ -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_login_email"
            style="@style/form_edittext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_action_mail"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/form_edittext"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_action_lock_closed"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/common_button"
                android:paddingRight="4dp"
                android:text="@string/sign_in" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="Not a member yet ?"
                android:textColor="@android:color/white"
                android:textSize="@dimen/s3"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/common_button"
                android:paddingRight="4dp"
                android:text="@string/sign_up" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>